# webhook_translate

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml  docker_img.yml
docs/: index.html  privacy.html  terms.html
docs/css/: style.css
tests/: health.hurl  test_defenses.py  webhook.hurl
